...

                    <TextView
                        android:id="@+id/textview_settings_activity_accesstype_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <RadioGroup
                        android:id="@+id/radiogroup_settings_activity_accesstype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
...

                    <TextView
                        android:id="@+id/textview_settings_activity_address_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_settings_activity_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_settings_activity_port_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_settings_activity_port"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_settings_activity_interval_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_settings_activity_interval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_settings_activity_interval_minutes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_settings_activity_onlywifi_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <Switch
                            android:id="@+id/switch_settings_activity_onlywifi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_settings_activity_onlywifi_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_settings_activity_notification_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <Switch
                            android:id="@+id/switch_settings_activity_notification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_settings_activity_notification_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_settings_activity_ping_count_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_settings_activity_ping_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_settings_activity_notification_inactive_network_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <Switch
                            android:id="@+id/switch_settings_activity_notification_inactive_network"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_settings_activity_notification_inactive_network_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
