<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="activity_setting_title">Settings</string>
    <string name="menu_action_reset">Reset</string>
    <string name="label_settings_activity_defaults">Defaults</string>
    <string name="label_settings_activity_address">Host / URL</string>
    <string name="label_settings_activity_port">Port</string>
    <string name="label_settings_activity_interval">Interval</string>
    <string name="label_settings_activity_onlywifi">Only on WiFi</string>
    <string name="label_settings_activity_notification">Notifications</string>
    <string name="label_settings_activity_accesstype">Type</string>
    <string name="label_settings_activity_global">Global settings</string>
    <string name="label_settings_activity_ping_count">Ping count</string>
    <string name="label_settings_activity_notification_inactive_network">Notifications when network is not active</string>
</resources>